fixed the alignment

--- a/src/components/Chat/MainChat/mainChat.css
+++ b/src/components/Chat/MainChat/mainChat.css
@@ -205,7 +205,7 @@
     padding: 10px;
   }
   .navbar-logo{
-    width: 160px;
+    width: 120px;
   }
   .chat-input {
     width: 80%;
